added tender db and api
