# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\BekanntmachungController;
 use App\Http\Controllers\CpvSuggestController;
 use App\Http\Controllers\HealthController;
 use Illuminate\Support\Facades\Route;
@@ -14,4 +15,11 @@ Route::prefix('v1')->group(function () {
     // TODO: Enable auth:sanctum in production
     Route::middleware(['throttle:60,1'])
         ->post('/cpv/suggest', CpvSuggestController::class);
+
+    // Bekanntmachungen endpoints
+    Route::middleware(['throttle:60,1'])->group(function () {
+        Route::get('/bekanntmachungen', [BekanntmachungController::class, 'index']);
+        Route::get('/bekanntmachungen/{id}', [BekanntmachungController::class, 'show']);
+        Route::post('/bekanntmachungen/search', [BekanntmachungController::class, 'search']);
+    });
 });
